--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -14,7 +14,7 @@
       display: flex;
       flex-direction: column;
       row-gap: $space-xl;
-      flex: 1 0 30%;
+      flex: 0 1 30%;
 
       @include respond(tab-port) {
         flex: 1;
@@ -38,12 +38,14 @@
       display: flex;
       flex-wrap: wrap;
       gap: $space-md;
-      flex: 1 0 70%;
-      padding-right: 10rem;
+      flex: 1;
+      padding-right: 5rem;
+
+      @include respond(tab-land) {
+        padding-right: 0;
+      }
 
       @include respond(tab-port) {
-        flex: 1;
-        padding-right: 0;
         flex-direction: column;
       }
 
